# local-rag-cli

./: .gitignore  README.md  main.py  pyproject.toml
src/local_rag_cli/: __init__.py  __main__.py  cli.py  config.py  embeddings.py  ingest.py  rag.py  storage.py
tests/: test_config.py
