[project]
name = "local-rag-cli"
version = "0.1.0"
description = "Local RAG CLI for Mac M4 Pro"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.0",
    "httpx>=0.28.1",
    "llama-index>=0.14.13",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-ollama>=0.5.0",
    "open-clip-torch>=2.24.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/local_rag_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]


[project.scripts]
local-rag-cli = "local_rag_cli.cli:app"
